--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -3,15 +3,15 @@
       <table class="table table-bordered table-striped">
         <thead class="thead-dark">
           <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Company</th>
+            <th scope="col">Name</th>
+            <th scope="col">Age</th>
             
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let car of cars">
-            <td>{{ car.id }}</td>
-            <td>{{ car.Company }}</td>
+            <td>{{ car.name }}</td>
+            <td>{{ car.age }}</td>
             
           </tr>
         </tbody>
