--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,11 @@
         <div class="card-body">
           <h2  class="card-title text-center text-white py-3">{{ title }}</h2>
           <ul class="text-center list-inline py-3">
-            <li class="list-inline-item"><a routerLink="/employees" class="btn btn-info">List Employees</a></li>
+            <li class="list-inline-item"><a class="btn btn-info">List Employees</a></li>
           </ul>
         </div>
       </div>
-      <router-outlet></router-outlet>
+      <app-car-list></app-car-list>
     </div>
   </div>
 </div>
